# bde

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: from_bytes.rs
src/: byte_string.rs  de.rs  error.rs  lib.rs  ser.rs
src/de/: deserializer.rs  map_deserializer.rs  mod.rs
src/ser/: map_key_serializer.rs  map_serializer.rs  mod.rs  serializer.rs  unsorted_map_serializer.rs  unsorted_serializer.rs
src/value/: de.rs  integer.rs  mod.rs  ser.rs
tests/: preserve_torrent_body.rs
tests/torrents/: archlinux.torrent  debian.torrent  endeavour.torrent  fedora.torrent  lubuntu.torrent
