[package]
name = "bde"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "B-Decoder/Encoder"
readme = "README.md"
documentation = "https://docs.rs/bde"
repository = "https://github.com/morr0ne/bde"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "LICENSE-ZLIB"]

[dependencies]
num-traits = "0.2.15"
paste = "1.0.7"
serde = "1.0.152"
thiserror = "1.0.38"

[dev-dependencies]
serde_derive = "1.0.152"
serde_bencode = "0.2.3"
color-eyre = "0.6.2"
serde_bytes = "0.11.8"
serde_test = "1.0.152"
url = { version = "2.3.1", features = ["serde"] }
